<resources>
    <string name="app_name">Class Overflow</string>

    <string name="questions_title">Perguntas</string>
    <string name="profile_title">Perfil</string>
    <string name="add_question">Adicionar pergunta</string>
    <string name="exit">Sair</string>
    <string name="credential">E-mail</string>
    <string name="password">Senha</string>
    <string name="login_title">Login</string>
    <string name="enter">Entrar</string>

    <string name="question_detail_cant_load">Não foi possível carregar a pergunta.</string>
    <string name="question_detail_comments_title">Comentários</string>
    <string name="questions_cant_load_questions">Não foi possível carregar as publicações.</string>
    <string name="comment_hint">Comentário</string>
    <string name="comment">Comentar</string>
    <string name="like_add">Curtida adicionada</string>
    <string name="like_removed">Curtida removida</string>
    <string name="like_error">Erro ao curtir</string>
    <string name="add_question_title">Adicionar pergunta</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="subject">Disciplina</string>
    <string name="topics">Tópicos</string>
    <string name="save">Salvar</string>
    <string name="delete">Apagar</string>
    <string name="edit_question_title">Editar pergunta</string>
    <string name="cant_execut_action">Não foi possível executar a ação.</string>
    <string name="all_fields_required">Todos os campos são obrigatórios</string>
    <string name="register"><U>Registrar</U></string>
</resources>