<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.login.LoginActivity">

    <data>

        <variable
            name="viewModel"
            type="br.com.grupo4.classoverflow.feature.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/default_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/default_margin" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/login_title"
            android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
            android:textColor="@color/primary_text_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_credential"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:hint="@string/credential"
            app:layout_constraintBottom_toTopOf="@id/login_password"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/login_title"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_credential">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_credential_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:inputType="none"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{viewModel.credential}"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/primary_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@id/login_enter"
            app:layout_constraintEnd_toStartOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/login_credential"
            app:layout_constraintVertical_chainStyle="packed"
            app:startIconDrawable="@drawable/ic_key">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@{viewModel.password}"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:textColor="@color/primary_text_color" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="@dimen/default_margin"
            android:onClick="@{() -> viewModel.login()}"
            android:text="@string/enter"
            app:backgroundTint="@color/color_accent"
            app:icon="@drawable/ic_login"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/login_password"
            app:layout_constraintVertical_chainStyle="packed" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55000000"
            android:goneUnless="@{viewModel.isLoading}"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/color_primary" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>