<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.HomeActivity">

    <data>

        <variable
            name="viewModel"
            type="br.com.grupo4.classoverflow.feature.addquestion.AddQuestionViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/default_margin" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/default_margin" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/add_question_back"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="@dimen/default_margin"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:hapticFeedbackEnabled="true"
                    android:onClick="@{() -> viewModel.back()}"
                    android:tint="@color/color_on_background"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_back" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/add_question_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:maxLines="4"
                    android:text="@string/add_question_title"
                    android:textAppearance="@style/TextAppearance.Material3.DisplaySmall"
                    android:textColor="@color/primary_text_color"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/add_question_back" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_question_input_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/title"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/add_question_title"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_question_edit_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="@={viewModel.title}"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textColor="@color/primary_text_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_question_input_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/description"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/add_question_input_title"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_question_edit_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:lines="6"
                        android:text="@={viewModel.description}"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textColor="@color/primary_text_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_question_input_subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/subject"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/add_question_input_description"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_question_edit_subject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:text="@={viewModel.subject}"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textColor="@color/primary_text_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/add_question_input_topics"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:hint="@string/topics"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/add_question_input_subject"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/add_question_edit_topics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:imeOptions="actionSend"
                        android:inputType="text"
                        android:text="@={viewModel.topics}"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:textColor="@color/primary_text_color" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_question_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="48dp"
                    android:layout_marginTop="32dp"
                    android:onClick="@{() -> viewModel.save()}"
                    android:stateListAnimator="@null"
                    android:text="@string/save"
                    app:backgroundTint="@color/color_accent"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/add_question_input_topics" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_question_delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="48dp"
                    android:layout_marginTop="8dp"
                    android:goneUnless="@{viewModel.isEditMode}"
                    android:onClick="@{() -> viewModel.delete()}"
                    android:stateListAnimator="@null"
                    android:text="@string/delete"
                    app:backgroundTint="@color/color_error"
                    app:layout_constraintEnd_toEndOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/add_question_save" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:clickable="false"
            android:goneUnless="@{viewModel.isLoading}"
            tools:visibility="gone">

            <ProgressBar
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/color_primary" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>